--- a/src/components/navigation.scss
+++ b/src/components/navigation.scss
@@ -14,6 +14,7 @@
   position: absolute;
   top: 0;
   left: 2rem;
+  z-index: 1;
 }
 
 .nav-item--new {
@@ -24,12 +25,17 @@
   margin-left: 10rem;
 }
 
+.navbar {
+  padding: 0 !important;
+}
+
 .navbar-nav {
   font-size: 0.8rem;
 }
 
 .navbar-nav .nav-link {
-  padding: 1rem 0;
+  padding: 1.5rem 1rem !important;
+  margin-left: 4px;
   text-transform: uppercase;
   color: $primary-text;
   font-weight: 600;
@@ -41,4 +47,7 @@
 }
 
 @media (min-width: 768px) {
+  #basic-navbar-nav {
+    margin-left: 15rem;
+  }
 }
