Change global styles

--- a/src/styles/__colors.scss
+++ b/src/styles/__colors.scss
@@ -1,6 +1,7 @@
 $red: #ed2d2f;
 $primary-text: #58595b;
-$secondary-text: #3498db;
+$blue: #3498db;
 
+$darker-white: #939598;
 $dark-white: #e6e7e8;
 $white: #ffffff;
