--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,14 +1,14 @@
 @import "../styles/_colors";
 
-.footer {
+.footer,
+.accordian {
   background: $dark-white;
-  font-weight: 600;
-  font-size: 0.9rem;
 }
 
 .footer__header {
   font-weight: 600;
   color: $red;
+  text-transform: uppercase;
 }
 
 .footer__info {
@@ -22,6 +22,7 @@
   display: block;
   text-decoration: none;
   margin-bottom: 0.5rem;
+  font-weight: 600;
   color: $primary-text;
   &:hover {
     color: $red;
