--- a/src/components/product_card.scss
+++ b/src/components/product_card.scss
@@ -1,10 +1,24 @@
 @import "../styles/_colors";
 
 .product__name {
+  font-size: 1rem;
+  font-weight: 600;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.product__price {
+  color: $darker-white;
+}
+
+.product__price--blue {
+  color: $blue;
+  font-weight: 600;
   font-size: 0.8rem;
 }
 
-.text-secondary {
-  font-size: 0.8rem;
-  color: $secondary-text;
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
 }
